not stable version; request to invoices api is missing

--- a/models/data/columns.yaml
+++ b/models/data/columns.yaml
@@ -73,3 +73,6 @@ columns:
         type: text
         searchable: true
         sortable: true
+    submission_completed:
+        label: 'Submission completed'
+        type: switch
