--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -63,3 +63,5 @@
 1.0.22:
     - 'Updated table pensoft_tdwgform_data'
     - builder_table_update_pensoft_tdwgform_data_11.php
+1.0.64:
+    - 'Updated table pensoft_tdwgform_data'
