--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -74,3 +74,5 @@
 1.0.69:
     - 'Updated table pensoft_tdwgform_data'
     - builder_table_update_pensoft_tdwgform_data_12.php
+1.0.70:
+    - 'Recaptcha fix'
