--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -104,3 +104,5 @@
 1.0.80:
     - 'Updated table pensoft_tdwgform_data'
     - builder_table_update_pensoft_tdwgform_data_21.php
+1.0.81:
+    - 'Completed where clause'
