fixes and new fields

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -106,3 +106,6 @@
     - builder_table_update_pensoft_tdwgform_data_21.php
 1.0.81:
     - 'Completed where clause'
+1.0.82:
+    - 'Updated table pensoft_tdwgform_data'
+    - builder_table_update_pensoft_tdwgform_data_22.php
