--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -102,13 +102,18 @@
     - 'Updated table pensoft_tdwgform_data'
 1.0.80:
     - 'Updated table pensoft_tdwgform_data'
-    - builder_table_update_pensoft_tdwgform_data_21.php
 1.0.81:
     - 'Completed where clause'
 1.0.82:
     - 'Updated table pensoft_tdwgform_data'
     - builder_table_update_pensoft_tdwgform_data_22.php
 1.0.83:
-    - 'Fix'
+    - Fix
 1.0.84:
-    - 'Fix'
+    - Fix
+1.0.85:
+    - 'Updated table pensoft_tdwgform_data'
+    - builder_table_update_pensoft_tdwgform_data_23.php
+1.0.86:
+    - 'Updated table pensoft_tdwgform_data'
+    - builder_table_update_pensoft_tdwgform_data_24.php
