--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -138,3 +138,5 @@
 1.0.96:
     - 'Updated table pensoft_tdwgform_data'
     - builder_table_update_pensoft_tdwgform_data_26.php
+1.0.97:
+    - 'Label change'
